--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/builders": "^1.6.3",
     "@discordjs/rest": "^1.7.1",
     "@prisma/client": "^4.14.0",
+    "@sentry/nextjs": "^7.57.0",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.29.7",
